[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ui/icon_missile.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/button_square_9.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/icon_cannone.png" type="Texture" id=3]
[ext_resource path="res://ui/buttons.gd" type="Script" id=4]
[ext_resource path="res://ui/buttons_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/button_round_9.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/label_live.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/label_dead.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/icon_bomb.png" type="Texture" id=9]
[ext_resource path="res://ui/MiniMap.tscn" type="PackedScene" id=10]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_bottom = 1.0
margin_bottom = -476.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="MiniMap" parent="." instance=ExtResource( 10 )]

[node name="ShotContainer" type="MarginContainer" parent="."]
margin_top = 44.0
margin_right = 40.0
margin_bottom = 60.0

[node name="Background" type="NinePatchRect" parent="ShotContainer"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Shot" type="TextureButton" parent="ShotContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0

[node name="Label" type="Label" parent="ShotContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Shot"
align = 1
valign = 1

[node name="CannonContainer" type="MarginContainer" parent="."]
margin_top = 64.0
margin_right = 40.0
margin_bottom = 80.0

[node name="Background" type="NinePatchRect" parent="CannonContainer"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Cannon" type="TextureButton" parent="CannonContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_bottom = -1.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CannonContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 3.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "999"
align = 1
valign = 1

[node name="MissileContainer" type="MarginContainer" parent="."]
margin_top = 84.0
margin_right = 40.0
margin_bottom = 100.0

[node name="Background" type="NinePatchRect" parent="MissileContainer"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Missile" type="TextureButton" parent="MissileContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 3.0
margin_bottom = -2.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="MissileContainer/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -5.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "999"
align = 1
valign = 1

[node name="BombContainer" type="MarginContainer" parent="."]
margin_top = 104.0
margin_right = 40.0
margin_bottom = 120.0

[node name="Background" type="NinePatchRect" parent="BombContainer"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )
texture = ExtResource( 6 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Bomb" type="TextureButton" parent="BombContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 2.0
margin_right = -3.0
margin_bottom = -3.0
texture_normal = ExtResource( 9 )

[node name="Label" type="Label" parent="BombContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 3.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "999"
align = 1
valign = 1

[node name="LifeContainer" type="MarginContainer" parent="."]
margin_top = 124.0
margin_right = 40.0
margin_bottom = 140.0

[node name="Control" type="Control" parent="LifeContainer"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )

[node name="LifeIcon" type="TextureRect" parent="LifeContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="LifeContainer/Control/LifeIcon"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -5.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "999"
align = 1
valign = 1

[node name="EnemysContainer" type="MarginContainer" parent="."]
margin_top = 144.0
margin_right = 40.0
margin_bottom = 160.0

[node name="Control" type="Control" parent="EnemysContainer"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )

[node name="EnemysIcon" type="TextureRect" parent="EnemysContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="EnemysContainer/Control/EnemysIcon"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -5.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "999"
align = 1
valign = 1

[connection signal="pressed" from="ShotContainer/Background/Shot" to="." method="_on_Shot_pressed"]
[connection signal="pressed" from="CannonContainer/Background/Cannon" to="." method="_on_Cannon_pressed"]
[connection signal="pressed" from="MissileContainer/Background/Missile" to="." method="_on_Missile_pressed"]
[connection signal="pressed" from="BombContainer/Background/Bomb" to="." method="_on_Bomb_pressed"]
